TEIID-1088 ensuring that the vdb filename is set as just the filename and not the full path.